# hw_codecraft_2025

./: .gitignore  README.md  tzx_note.md
2025-code-craft-preliminary/: Makefile
2025-code-craft-preliminary/cpp/: CMakeLists.txt  HandlerImpl_sample.cpp  HandlerImpl_sample.h  HandlerImpl_tzx.h  HandlerImpl_tzx2.h  HandlerImpl_xh.h  IHandler.cpp  IHandler.h  main.cpp
2025-code-craft-preliminary/cpp/include/: common.h
2025-code-craft-preliminary/data/: practice.in  sample.in  sample1.in  sample_extra.in  sample_official.in  sample_practice.in
2025-code-craft-preliminary/interactor/linux/: interactor
2025-code-craft-preliminary/interactor/macos/: interactor
